Organized file structure and added basic backend/frontend functionalities.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,7 @@
         <h1>MiniPlayground</h1>
     </header>
     <main id="game-list">
-        <!-- Game links go here -->
+        <!-- Game links will be dynamically added -->
     </main>
     <script src="./components/main.js"></script>
 </body>
